--- a/_posts/2019-07-08-the-us-narrative-today.html
+++ b/_posts/2019-07-08-the-us-narrative-today.html
@@ -943,107 +943,107 @@ stories:
   domain: http://www.dotnews.com/
   link: https://www.dotnews.com/2019/condo-project-aspinwall-under-review
 images:
-- name: ellis-island-ellisisland-colorful-dream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-colorful-dream.jpg
-- name: berlinwall2-berlinwall-far-away.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-far-away.jpg
-- name: adam-smith-adam-smith-colorful-blocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-colorful-blocks.jpg
-- name: amusement-park-amusement-park-2-constitution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-constitution.jpg
-- name: old-barn-old-barn-1500-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-kand-two.jpg
-- name: curtain-curtain-atari-asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-atari-asteroids.jpg
-- name: bordercrossing-bordercrossing-oily-mcoilface.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-oily-mcoilface.jpg
-- name: old-granary-field-oldhouse-gan-vogh.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-gan-vogh.jpg
-- name: aws-s3-stories-new-59-124-800-500-0-max-0--5--5.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-59-124-800-500-0-max-0--5--5.jpg
-- name: old-door-lock-old-door-lock-oily-mcoilface.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-oily-mcoilface.jpg
+- name: beach-clouds-lifeguard-beachclouds-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-blue-brush.jpg
+- name: containership-containership-space-pizza.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-space-pizza.jpg
+- name: old-barn-old-barn-1500-oily-mcoilface.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-oily-mcoilface.jpg
+- name: san-francisco-street-view-san-francisco-street-view-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-spagetti-accident.jpg
+- name: border-fence-border-fence-on-hill-umberto-bocc.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-umberto-bocc.jpg
+- name: beach-clouds-lifeguard-beachclouds-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-dark-soul.jpg
+- name: beach-rocks-beach-rocks-currents-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-blue-circuit.jpg
+- name: beach-clouds-lifeguard-beachclouds-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-cinnamon-rolls.jpg
+- name: aws-s3-stories-downtown-fredericksburg-feed-people.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-downtown-fredericksburg-feed-people.JPG
+- name: old-house-oldhouse-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-dry-skin.jpg
+- name: los-angeles-from-observatory-losangeles-from-observatory-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-smoking-cigarette.jpg
+- name: walled-garden-walled-garden-space-pizza.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-space-pizza.jpg
+- name: art-museum-art-museum-far-away.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-far-away.jpg
+- name: dragon-desert-desert-dragon-smooth-ride.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-smooth-ride.jpg
+- name: fence-mexico-emily-carr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-emily-carr.jpg
+- name: wind-mills-windmills-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wind-mills-windmills-light-dali.jpg
+- name: legal-statue-legalstatue-graham-sutherland.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-graham-sutherland.jpg
+- name: windowmountain-window-mountain-purple-pond.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-purple-pond.jpg
+- name: downtheline-downtheline-oily-mcoilface.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-oily-mcoilface.jpg
+- name: school-clouds-church-clouds-kandinsky-bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-kandinsky-bv.jpg
+- name: white-house-whitehouse-kandinsky-bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-kandinsky-bv.jpg
+- name: machine-road-machine-road-jap-dys-1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-jap-dys-1.jpg
+- name: status-berlin-status-berlin-attack-planes.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-attack-planes.jpg
+- name: oldhousecars-house-old-cars-purp-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-purp-paper.jpg
+- name: oldhouse-oldhouse-umberto-bocc.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-umberto-bocc.jpg
+- name: window-window-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-clean-view.jpg
+- name: machine-road-machine-road-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-internet-numbers.jpg
+- name: dc-statue-dcstatue-alberto-giacometti.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-alberto-giacometti.jpg
+- name: mistywoods-babyfoot-crafty-painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-crafty-painting.jpg
+- name: fence-fence-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-dark-soul.jpg
+- name: blossombar-aqua-file-00-00-00-00.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-aqua-file-00-00-00-00.jpg
+- name: containership-containership-ww2-color.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-ww2-color.jpg
+- name: stories-new-old-door-lock-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-old-door-lock-smoking-cigarette.jpg
+- name: death-valley-death-valley-national-park-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-matrix.jpg
+- name: locked-up-steam-lock-up-steam-purple-pond.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-purple-pond.jpg
+- name: flower-barbed-wire-flower-barbed-wire-propaganda-leaflets.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-propaganda-leaflets.jpg
+- name: oldtrain-oldtrain-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-atari-asteroids.jpg
+- name: server-cloud-server-racks-clouds-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-dark-soul.jpg
+- name: flower-barbed-wire-flower-barbed-wire-kandinsky-bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-kandinsky-bv.jpg
+- name: wind-mills-windmills-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wind-mills-windmills-blue-brush.jpg
+- name: paris-paris-ww2-color.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-ww2-color.jpg
+- name: hollywood-building-hollywood-building-attack-planes.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-attack-planes.jpg
+- name: border-fence-border-fence-on-hill-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-gan-vogh.jpg
+- name: san-francisco-street-view-san-francisco-street-view-hot-spicy.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-hot-spicy.jpg
+- name: abandonedbuildings_crunch_paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_crunch_paper.jpg
 - name: 35201856153_61bc075e4b-nazi-invasion.jpg
   url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/35201856153_61bc075e4b-nazi-invasion.jpg
-- name: bluelake-gred-mash-file-00-00-38-67.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-gred-mash-file-00-00-38-67.jpg
-- name: stories-power-lines-empty-space-copper-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-power-lines-empty-space-copper-circuit.jpg
-- name: mosaic-face-mosaic-face-purp-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-purp-paper.jpg
-- name: subway-subway-light-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-light-dali.jpg
-- name: store-on-corner-store-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-clean-view.jpg
-- name: aws-s3-royalroads-royalroads-still.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-royalroads-royalroads-still.jpg
-- name: border-fence-border-fence-on-hill-deep-connections.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-deep-connections.jpg
-- name: ellis-island-ellisisland-neo-instinct.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-neo-instinct.jpg
-- name: oldtrain-oldtrain-monet-one.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-monet-one.jpg
-- name: machine-road-machine-road-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-clean-view.jpg
-- name: ellis-island-ellisisland-colorful-blocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-colorful-blocks.jpg
-- name: machine-road-machine-road-cinnamon-rolls.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-cinnamon-rolls.jpg
-- name: hollywood-building-hollywood-building-feed-people.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-feed-people.jpg
-- name: statue-of-liberty-front-view-statueofliberty-post-modern.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-post-modern.jpg
-- name: eduardo-eduardo-purp-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/eduardo-eduardo-purp-paper.jpg
-- name: san-francisco-city-bridge-sf-city-bridge-colorful-blocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-colorful-blocks.jpg
-- name: oldhousecars-house-old-cars-mucha-mult.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-mucha-mult.jpg
-- name: crypto-machine-bletchley-crypto-machine-bletchley-oily-mcoilface.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-oily-mcoilface.png
-- name: carry-load-carryload-atari-asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-atari-asteroids.jpg
-- name: castle-wall-DSC-0067-blue-circuit-3.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-blue-circuit-3.JPG
-- name: old-church-oldchurch-nazi-poster.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-nazi-poster.jpg
-- name: oldhouse-granaryfield-smooth-ride.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-smooth-ride.jpg
-- name: blossombar-blue-granite-file-00-00-24-99.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-blue-granite-file-00-00-24-99.jpg
-- name: yosemite-yosemite-colorful-blocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-colorful-blocks.jpg
-- name: aws-s3-meadow-meadow-bright-sand-still.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-meadow-meadow-bright-sand-still.jpg
-- name: christianity-christianity-under-construction-constitution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-constitution.jpg
-- name: white-house-lawn-white-house-window-post-modern.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-post-modern.jpg
-- name: gypsy-wagon-gypsywagon-far-away.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-far-away.jpg
-- name: cargo-ship-cargo-ship-on-sea-post-modern.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-post-modern.jpg
-- name: yosemite-yosemite-kandinsky-bv.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-kandinsky-bv.jpg
-- name: old-gas-pumps-oldgaspumps-ww2-dresden.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-ww2-dresden.jpg
-- name: locked-up-steam-lock-up-steam-smooth-ride.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-smooth-ride.jpg
-- name: powerlines-power-neo-instinct.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-neo-instinct.jpg
-- name: berlinwall-DSC-0084-atari-asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-atari-asteroids.jpg
-- name: bluelake-gan-vogh-file-00-00-38-67.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-gan-vogh-file-00-00-38-67.jpg
-- name: abe-lincoln-one-smoking-cigarette-file-00-00-15-87.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-smoking-cigarette-file-00-00-15-87.jpg
-- name: adam-smith-adam-smith-atari-asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-atari-asteroids.jpg
-- name: school-clouds-church-clouds-jap-wav-pr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-jap-wav-pr.jpg
-- name: christianity-christianity-under-construction-kandinsky-bv.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-kandinsky-bv.jpg
-- name: containership-containership-purple-storm.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-purple-storm.jpg
+- name: flower-barbed-wire-flower-barbed-wire-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-atari-missle.jpg
+- name: rockingchair-rockingchair-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-crunch-paper.jpg
+- name: dc-statue-dcstatue-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-clean-view.jpg
+- name: subway-subway-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-creativity.jpg
+- name: containership-containership-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-crabapple.jpg
 ---
 Afghan Officials Say Car Bomb Kills 12, Wounds Scores.&nbsp;Holocaust Survivor And Forgiveness Advocate, Eva Kor.&nbsp;4th Of July Storm Damages Homes, Topples Trees In Rusk County.&nbsp;City Adopts Changes To Utility Collection Policy.&nbsp;Mexican President Gets Little Backlash For Migrant Crackdown.&nbsp;Ongoing Uncertainty Looms Over Tariff Truce.&nbsp;Vermillion Artist Envisions Prehistoric Creatures With Scrap Metal.&nbsp;Improvement Deadline Looms For Federally Subsidized Galveston Complex.&nbsp;
